--- a/index.html
+++ b/index.html
@@ -61,16 +61,11 @@
             <a class="nav-link js-scroll-trigger" href="#about">About</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#education">Smells</a>
+            <a class="nav-link js-scroll-trigger" href="#smells">Smells</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#education"
+            <a class="nav-link js-scroll-trigger" href="#architecture"
               >Architecture</a
-            >
-          </li>
-          <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#skills"
-              >Machine Learning</a
             >
           </li>
           <li class="nav-item">
@@ -99,174 +94,83 @@
             <span class="text-primary">Tool</span>
           </h1>
           <div class="subheading mb-5">
-            3542 Berry Street · Cheyenne Wells, CO 80810 · (317) 585-8468 ·
-            <a href="mailto:name@email.com">name@email.com</a>
+            contact me
+            <a href="mailto:name@email.com">warteruzannan@gmail.com</a>
           </div>
           <p class="lead mb-5">
             Intelligent Smell Detector (InSet) is a tool that detects
             architectural smells using machine learning. It was created within
             the AdvanSE laboratory of the Universidade Federal de São Carlos
-            (UFSCar). The tool was created by Warteuzannan Soyer Cunha.
+            (UFSCar). This tool was created by warteruzannan in his master's
+            project.
           </p>
-          <div class="social-icons">
-            <a class="social-icon" href="#"
-              ><i class="fab fa-linkedin-in"></i
-            ></a>
-            <a class="social-icon" href="#"><i class="fab fa-github"></i></a>
-            <a class="social-icon" href="#"><i class="fab fa-twitter"></i></a>
-            <a class="social-icon" href="#"
-              ><i class="fab fa-facebook-f"></i
-            ></a>
-          </div>
         </div>
       </section>
       <hr class="m-0" />
-      <!-- Experience-->
-      <section class="resume-section" id="experience">
+
+      <section class="resume-section" id="smells">
         <div class="resume-section-content">
-          <h2 class="mb-5">Experience</h2>
-          <div
-            class="d-flex flex-column flex-md-row justify-content-between mb-5"
-          >
-            <div class="flex-grow-1">
-              <h3 class="mb-0">Senior Web Developer</h3>
-              <div class="subheading mb-3">Intelitec Solutions</div>
-              <p>
-                Bring to the table win-win survival strategies to ensure
-                proactive domination. At the end of the day, going forward, a
-                new normal that has evolved from generation X is on the runway
-                heading towards a streamlined cloud solution. User generated
-                content in real-time will have multiple touchpoints for
-                offshoring.
-              </p>
-            </div>
-            <div class="flex-shrink-0">
-              <span class="text-primary">March 2013 - Present</span>
-            </div>
-          </div>
-          <div
-            class="d-flex flex-column flex-md-row justify-content-between mb-5"
-          >
-            <div class="flex-grow-1">
-              <h3 class="mb-0">Web Developer</h3>
-              <div class="subheading mb-3">Intelitec Solutions</div>
-              <p>
-                Capitalize on low hanging fruit to identify a ballpark value
-                added activity to beta test. Override the digital divide with
-                additional clickthroughs from DevOps. Nanotechnology immersion
-                along the information highway will close the loop on focusing
-                solely on the bottom line.
-              </p>
-            </div>
-            <div class="flex-shrink-0">
-              <span class="text-primary">December 2011 - March 2013</span>
-            </div>
-          </div>
-          <div
-            class="d-flex flex-column flex-md-row justify-content-between mb-5"
-          >
-            <div class="flex-grow-1">
-              <h3 class="mb-0">Junior Web Designer</h3>
-              <div class="subheading mb-3">Shout! Media Productions</div>
-              <p>
-                Podcasting operational change management inside of workflows to
-                establish a framework. Taking seamless key performance
-                indicators offline to maximise the long tail. Keeping your eye
-                on the ball while performing a deep dive on the start-up
-                mentality to derive convergence on cross-platform integration.
-              </p>
-            </div>
-            <div class="flex-shrink-0">
-              <span class="text-primary">July 2010 - December 2011</span>
-            </div>
-          </div>
-          <div class="d-flex flex-column flex-md-row justify-content-between">
-            <div class="flex-grow-1">
-              <h3 class="mb-0">Web Design Intern</h3>
-              <div class="subheading mb-3">Shout! Media Productions</div>
-              <p>
-                Collaboratively administrate empowered markets via plug-and-play
-                networks. Dynamically procrastinate B2C users after installed
-                base benefits. Dramatically visualize customer directed
-                convergence without revolutionary ROI.
-              </p>
-            </div>
-            <div class="flex-shrink-0">
-              <span class="text-primary">September 2008 - June 2010</span>
-            </div>
-          </div>
+          <h2 class="mb-5">Smells</h2>
+
+          <h4 class="mb-5">God Component (GC)</h4>
+          <p>
+            God Component is a component of your system, usually a big one,
+            involving several classes, interfaces and other packages. Most of
+            the time a God Component assumes more responsibilities than it
+            should and can be characterized by the difficulty of maintenance and
+            evolution.
+          </p>
+          <p class="mb-0">
+            A way to identify this smell is to find a component that has great
+            potential to spread side effects when it is changed. Therefore, the
+            persons more indicated to identify God Component are those that
+            maintain the system since they know what are the components that
+            want to be God.
+          </p>
+          <br />
+          <br />
+          <br />
+          <br />
+          <h4 class="mb-5">Unstable Dependency (UD)</h4>
+          <p>
+            Thus, Martin (1998) realizes that any architectural elements must
+            depend on a more stable one than itself. According to Fontana
+            (2017), an unstable dependency is characterized by architectural
+            elements that depend on more unstable ones.
+          </p>
+
+          <p>
+            Since components relate to each other, they must be cohesively and
+            designed. However, as systems grow, the difficulty of maintaining
+            some elements of the architecture becomes evident, complex, and
+            costly to evolve. Thus, this high cost may exist due to the
+            difficulty of dealing with all relationships of this component.
+          </p>
+
+          <p>
+            According to this complexity, maintenance difficulty, number of
+            relationships, among other factors, we can measure the instability
+            of a component. The concept of instability may vary according to the
+            knowledge of software engineers who know the system
+          </p>
+        </div>
+      </section>
+      <!-- Experience-->
+      <section class="resume-section" id="architecture">
+        <div class="resume-section-content">
+          <h2 class="mb-5">Architecture</h2>
+          <img width="800" src="assets/img/architecture.png" alt="" />
         </div>
       </section>
       <hr class="m-0" />
       <!-- Education-->
       <section class="resume-section" id="education">
-        <div class="resume-section-content">
-          <h2 class="mb-5">Education</h2>
-          <div
-            class="d-flex flex-column flex-md-row justify-content-between mb-5"
-          >
-            <div class="flex-grow-1">
-              <h3 class="mb-0">University of Colorado Boulder</h3>
-              <div class="subheading mb-3">Bachelor of Science</div>
-              <div>Computer Science - Web Development Track</div>
-              <p>GPA: 3.23</p>
-            </div>
-            <div class="flex-shrink-0">
-              <span class="text-primary">August 2006 - May 2010</span>
-            </div>
-          </div>
-          <div class="d-flex flex-column flex-md-row justify-content-between">
-            <div class="flex-grow-1">
-              <h3 class="mb-0">James Buchanan High School</h3>
-              <div class="subheading mb-3">Technology Magnet Program</div>
-              <p>GPA: 3.56</p>
-            </div>
-            <div class="flex-shrink-0">
-              <span class="text-primary">August 2002 - May 2006</span>
-            </div>
-          </div>
-        </div>
+        under construction :)
       </section>
       <hr class="m-0" />
       <!-- Skills-->
       <section class="resume-section" id="skills">
-        <div class="resume-section-content">
-          <h2 class="mb-5">Skills</h2>
-          <div class="subheading mb-3">Programming Languages & Tools</div>
-          <ul class="list-inline dev-icons">
-            <li class="list-inline-item"><i class="fab fa-html5"></i></li>
-            <li class="list-inline-item"><i class="fab fa-css3-alt"></i></li>
-            <li class="list-inline-item"><i class="fab fa-js-square"></i></li>
-            <li class="list-inline-item"><i class="fab fa-angular"></i></li>
-            <li class="list-inline-item"><i class="fab fa-react"></i></li>
-            <li class="list-inline-item"><i class="fab fa-node-js"></i></li>
-            <li class="list-inline-item"><i class="fab fa-sass"></i></li>
-            <li class="list-inline-item"><i class="fab fa-less"></i></li>
-            <li class="list-inline-item"><i class="fab fa-wordpress"></i></li>
-            <li class="list-inline-item"><i class="fab fa-gulp"></i></li>
-            <li class="list-inline-item"><i class="fab fa-grunt"></i></li>
-            <li class="list-inline-item"><i class="fab fa-npm"></i></li>
-          </ul>
-          <div class="subheading mb-3">Workflow</div>
-          <ul class="fa-ul mb-0">
-            <li>
-              <span class="fa-li"><i class="fas fa-check"></i></span>
-              Mobile-First, Responsive Design
-            </li>
-            <li>
-              <span class="fa-li"><i class="fas fa-check"></i></span>
-              Cross Browser Testing & Debugging
-            </li>
-            <li>
-              <span class="fa-li"><i class="fas fa-check"></i></span>
-              Cross Functional Teams
-            </li>
-            <li>
-              <span class="fa-li"><i class="fas fa-check"></i></span>
-              Agile Development & Scrum
-            </li>
-          </ul>
-        </div>
+        under construction :)
       </section>
       <hr class="m-0" />
       <!-- Interests-->
