ADD: Adicionando texts

--- a/index.html
+++ b/index.html
@@ -69,17 +69,17 @@
             >
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#interests"
+            <a class="nav-link js-scroll-trigger" href="#publications"
               >Publications</a
             >
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#experience"
-              >Download</a
+            <a class="nav-link js-scroll-trigger" href="#downloads"
+              >Downloads</a
             >
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#awards">Cite this</a>
+            <a class="nav-link js-scroll-trigger" href="#cite">Cite this</a>
           </li>
         </ul>
       </div>
@@ -98,11 +98,11 @@
             <a href="mailto:name@email.com">warteruzannan@gmail.com</a>
           </div>
           <p class="lead mb-5">
-            Intelligent Smell Detector (InSet) is a tool that detects
-            architectural smells using machine learning. It was created within
-            the AdvanSE laboratory of the Universidade Federal de São Carlos
-            (UFSCar). This tool was created by warteruzannan in his master's
-            project.
+            Intelligent Smell Detector (InSet) is a tool created by
+            Warteruzannan Soyer Cunha for detecting architectural smells using
+            machine learning. It was created within the
+            <u><a href="http://advanse.dc.ufscar.br/">AdvanSE laboratory</a></u>
+            of the Universidade Federal de São Carlos (UFSCar).
           </p>
         </div>
       </section>
@@ -155,104 +155,82 @@
           </p>
         </div>
       </section>
-      <!-- Experience-->
+      <!-- downloads-->
       <section class="resume-section" id="architecture">
         <div class="resume-section-content">
-          <h2 class="mb-5">Architecture</h2>
+          <h2 class="mb-5">Architecture (Under construction)</h2>
           <img width="800" src="assets/img/architecture.png" alt="" />
         </div>
       </section>
       <hr class="m-0" />
-      <!-- Education-->
-      <section class="resume-section" id="education">
-        under construction :)
-      </section>
-      <hr class="m-0" />
-      <!-- Skills-->
-      <section class="resume-section" id="skills">
-        under construction :)
-      </section>
-      <hr class="m-0" />
-      <!-- Interests-->
-      <section class="resume-section" id="interests">
+      <!-- publications-->
+      <section class="resume-section" id="publications">
         <div class="resume-section-content">
-          <h2 class="mb-5">Interests</h2>
-          <p>
-            Apart from being a web developer, I enjoy most of my time being
-            outdoors. In the winter, I am an avid skier and novice ice climber.
-            During the warmer months here in Colorado, I enjoy mountain biking,
-            free climbing, and kayaking.
-          </p>
-          <p class="mb-0">
-            When forced indoors, I follow a number of sci-fi and fantasy genre
-            movies and television shows, I am an aspiring chef, and I spend a
-            large amount of my free time exploring the latest technology
-            advancements in the front-end web development world.
-          </p>
-        </div>
-      </section>
-      <hr class="m-0" />
-      <!-- Awards-->
-      <section class="resume-section" id="awards">
-        <div class="resume-section-content">
-          <h2 class="mb-5">Awards & Certifications</h2>
+          <h2 class="mb-5">Related Publications</h2>
           <ul class="fa-ul mb-0">
             <li>
-              <span class="fa-li"
-                ><i class="fas fa-trophy text-warning"></i
-              ></span>
-              Google Analytics Certified Developer
+              <span class="fa-li"><i class="fas fa-book"></i></span>
+              InSet: A Tool to Identify Architecture Smells Using Machine
+              Learning (2020)
             </li>
+
             <li>
-              <span class="fa-li"
-                ><i class="fas fa-trophy text-warning"></i
-              ></span>
-              Mobile Web Specialist - Google Certification
+              <span class="fa-li"><i class="fas fa-book"></i> </span>
+              Investigating Non-Usually Employed Features in the Identification
+              of Architectural Smells: A ML-Based Approach (2020)
             </li>
+
             <li>
-              <span class="fa-li"
-                ><i class="fas fa-trophy text-warning"></i
-              ></span>
-              1
-              <sup>st</sup>
-              Place - University of Colorado Boulder - Emerging Tech Competition
-              2009
-            </li>
-            <li>
-              <span class="fa-li"
-                ><i class="fas fa-trophy text-warning"></i
-              ></span>
-              1
-              <sup>st</sup>
-              Place - University of Colorado Boulder - Adobe Creative Jam 2008
-              (UI Design Category)
-            </li>
-            <li>
-              <span class="fa-li"
-                ><i class="fas fa-trophy text-warning"></i
-              ></span>
-              2
-              <sup>nd</sup>
-              Place - University of Colorado Boulder - Emerging Tech Competition
-              2008
-            </li>
-            <li>
-              <span class="fa-li"
-                ><i class="fas fa-trophy text-warning"></i
-              ></span>
-              1
-              <sup>st</sup>
-              Place - James Buchanan High School - Hackathon 2006
-            </li>
-            <li>
-              <span class="fa-li"
-                ><i class="fas fa-trophy text-warning"></i
-              ></span>
-              3
-              <sup>rd</sup>
-              Place - James Buchanan High School - Hackathon 2005
+              <span class="fa-li"><i class="fas fa-book"></i></span>
+              <a href="https://sol.sbc.org.br/index.php/vem/article/view/7587"
+                >Uma Investigação da Aplicação de Aprendizado de Máquina para
+                Detecção de Smells Arquiteturais (2019)</a
+              >
             </li>
           </ul>
+        </div>
+      </section>
+
+      <hr class="m-0" />
+
+      <section class="resume-section" id="downloads">
+        <div class="resume-section-content">
+          <h2 class="mb-5">Downloads (Under construction)</h2>
+        </div>
+      </section>
+
+      <hr class="m-0" />
+      <!-- Awards-->
+      <section class="resume-section" id="cite">
+        <div class="resume-section-content">
+          <h2 class="mb-5">Cite this</h2>
+          <code>
+            <br />
+            @INPROCEEDINGS{warteruzannan2020,
+            <br />
+            &nbsp;&nbsp;AUTHOR="Warteruzannan Cunha and Guisella Angulo and
+            Valter Camargo",
+            <br />
+            &nbsp;&nbsp;TITLE="InSet: A Tool to Identify Architecture Smells
+            Using Machine Learning",
+            <br />
+            &nbsp;&nbsp;BOOKTITLE="34th Brazilian Symposium on Software
+            Engineering (SBES '20), October 21--23, 2020, Natal, Brazil",
+            <br />
+            &nbsp;&nbsp;DAYS="19-23",
+            <br />
+            &nbsp;&nbsp;MONTH="oct",
+            <br />
+            &nbsp;&nbsp;YEAR="2020",
+            <br />
+            &nbsp;&nbsp;KEYWORDS="Software Maintenance; Software Quality",
+            <br />
+            &nbsp;&nbsp;DOI={10.1145/3422392.3422507},
+            <br />
+            &nbsp;&nbsp;ISBN={978-1-4503-8753-8/20/09},
+            <br />
+            }
+          </code>
         </div>
       </section>
     </div>
