--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
       <section class="resume-section" id="architecture">
         <div class="resume-section-content">
           <h2 class="mb-5">Architecture (Under construction)</h2>
-          <img width="800" src="assets/img/architecture.png" alt="" />
+          <img style="width: 80%" src="assets/img/architecture.png" alt="" />
         </div>
       </section>
       <hr class="m-0" />
