--- a/index.html
+++ b/index.html
@@ -208,10 +208,13 @@
               Learning (2020)
             </li>
 
-            <li>
+           <li>
               <span class="fa-li"><i class="fas fa-book"></i> </span>
-              Investigating Non-Usually Employed Features in the Identification
+              <a href="https://dl.acm.org/doi/abs/10.1145/3425269.3425281">
+                Investigating Non-Usually Employed Features in the Identification
               of Architectural Smells: A ML-Based Approach (2020)
+              </a>
+              
             </li>
 
             <li>
